1998-06-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c:
	    When presenting diagnostics on bad parameters on MAIL command,
	    the server used occasionally response number 455, where it
	    should use 501 -- cosmetic bug, I would say..

1998-06-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/zmailer.sh.in, proto/newaliases.in, proto/newdb.in,
	  proto/newfqdnaliases.in, utils/makedb/makedb.c:
	    - "makedb" got "-s" option so that in alias mode (-a) it
	      will not utter final statistics report
	    - Created command "zmailer newdb" which generates four
	      well known flatfile databases into their respective
	      binary views. (localnames, routes, aliases, fqdnaliases)
	      If all goes ok, this command prints no statistics of
	      databases.  (You could guess: somebody asked for this :) )
	    - Others just recognize the "-s" option, and pass it around
	      properly.
	
	* router/functions.c:
	    Removed large chunk of dead code (#if 0 ..)
	
	* proto/Makefile.in:
	    Fixed configuration file back-reference

	* smtpserver/smtpcmds.c:
	    When printing HELO-string into rcvdfrom comment, quote
	    also "(", and ")" characters.
	
	* smtpserver/smtpserver.c:
	    Revised that 'smtpserver -i' mode code so that
	    it should work on a wider array of systems.

1998-06-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, smtpserver/smtpcmds.c:
	    More Roy Bixler patches.  Moved some code around so
	    that the system will always know when it truly is
	    connected to a network socket. The server will not
	    produce "rcvdfrom " envelope header in case it is
	    not running on a network socket.

	* Most  Makefile.in  files:
	    Reworked on "prefix=nnnnn make install" installation.
	    Now it creates the target parent directories if needed.

	* Makefile.in, ChangeLog:
	    Version 2.99.50-s5 -- are we now safe ??

	* transports/mailbox/mailbox.c:
	    Added a bit earlier test for "user" /dev/null so that