@@ -1,5 +1,10 @@
 1998-06-04  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* compat/sendmail/sendmail.c:
+	    - Parse and verify option parameters for -B and -p options
+	    - implement -s option (save From_)
+	    - wrote a REAL usage() report -- try 'sendmail -?' to see
+	
 	* smtpserver/smtpcmds.c:
 	    When presenting diagnostics on bad parameters on MAIL command,
 	    the server used occasionally response number 455, where it
